--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,93 @@
-asgiref
-Django
-django-cors-headers
-djangorestframework
-djangorestframework-simplejwt
-PyJWT
-pytz
-sqlparse
-psycopg2-binary
-python-dotenv
-drf-yasg
-pillow
-mysqlclient
-django-debug-toolbar
-channels
-channels-redis
+accelerate==1.0.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.8
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+asgiref==3.8.1
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
+certifi==2024.8.30
+cffi==1.17.1
+channels==4.1.0
+channels-redis==4.2.0
+charset-normalizer==3.3.2
+constantly==23.10.4
+contourpy==1.3.0
+cryptography==43.0.1
+cycler==0.12.1
+daphne==4.1.2
+Django==5.1
+django-cors-headers==4.4.0
+django-debug-toolbar==4.4.6
+django-elasticsearch-dsl==8.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+einops==0.8.0
+elastic-transport==8.15.0
+elasticsearch==8.15.1
+elasticsearch-dsl==8.15.3
+filelock==3.16.1
+fonttools==4.54.1
+frozenlist==1.4.1
+fsspec==2024.9.0
+huggingface-hub==0.25.2
+hyperlink==21.0.0
+idna==3.8
+incremental==24.7.2
+inflection==0.5.1
+Jinja2==3.1.4
+kiwisolver==1.4.7
+MarkupSafe==3.0.1
+matplotlib==3.9.2
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+mysqlclient==2.2.4
+netifaces==0.10.6
+networkx==3.4.1
+ninja==1.11.1.1
+numpy==1.26.4
+packaging==24.1
+pillow==10.4.0
+psutil==6.0.0
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+PyJWT==2.9.0
+pyOpenSSL==24.2.1
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.2
+RapidFuzz==3.10.0
+redis==5.0.8
+regex==2024.9.11
+requests==2.32.3
+safetensors==0.4.5
+service-identity==24.1.0
+setuptools==75.1.0
+six==1.16.0
+sqlparse==0.5.1
+sympy==1.13.3
+timm==1.0.9
+tokenizers==0.20.1
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tqdm==4.66.5
+transformers==4.45.2
+twilio==9.3.2
+Twisted==24.7.0
+txaio==23.1.1
+typing_extensions==4.12.2
+Unidecode==1.3.8
+uritemplate==4.1.1
+urllib3==2.2.3
+wheel==0.44.0
+whitenoise==6.7.0
+yarl==1.13.1
+zope.interface==7.0.3
