--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_API_ENDPOINT = http://localhost:8000
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME='dveileu6u'
+NEXT_PUBLIC_CLOUDINARY_API_KEY='341354174695962'
+NEXT_PUBLIC_CLOUDINARY_API_SECRET='tTq34CZKRBUec7WXM7-eUppdClc'
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET='qy2bvubo'
