--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cloudinary-react": "^1.8.1",
     "next": "14.2.12",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
